# netDroid

./: CMakeLists.txt  README.md  cmake_install.cmake  gmon.out  imgui.ini
client/: fileBootstrap.ini
client/data/: english.lang  italian.lang  loadFileMap.txt
client/hdr/: defines.h  main.h
client/hdr/classes/: c_audioClass.h  c_glFont.h  c_shaders.h  c_window.h  client.h
client/hdr/network/: c_network.h  network.h
client/hdr/openGL/: c_glDebug.h  c_glWrap.h
client/hdr/system/: c_audio.h  c_clientPeerInfo.h  c_console.h  c_events.h  c_fileBootstrap.h  c_gameEvents.h  c_graphics.h  c_processNetworkState.h  c_renderClientFrame.h  c_requests.h  c_scriptData.h  c_scriptEngine.h  c_shutdown.h  c_util.h  processClientFrame.h  processNetworkState.h
client/src/: main.cpp
client/src/classes/: c_audioClass.cpp  c_glFont.cpp  c_shaders.cpp  c_window.cpp  client.cpp
client/src/network/: c_network.cpp
client/src/openGL/: c_glDebug.cpp  c_glWrap.cpp
client/src/system/: c_audio.cpp  c_clientPeerInfo.cpp  c_console.cpp  c_events.cpp  c_fileBootstrap.cpp  c_gameEvents.cpp  c_graphics.cpp  c_processClientFrame.cpp  c_processNetworkState.cpp  c_renderClientFrame.cpp  c_requests.cpp  c_scriptData.cpp  c_scriptEngine.cpp  c_shutdown.cpp  c_util.cpp
common/hdr/: com_binaryBlob.h  com_globals.h  com_netEvents.h  com_util.h  simpleIni.h
common/hdr/classes/: com_console.h  com_droidScript.h  com_droidTime.h  com_fileMapping.h  com_language.h  com_message.h  com_networkState.h  com_texture.h  com_threadsEngine.h
common/hdr/tinyxml2/: tinyxml2.h
common/src/: com_netEvents.cpp  com_util.cpp
common/src/classes/: com_binaryBlob.cpp  com_console.cpp  com_droidScript.cpp  com_droidTime.cpp  com_fileMapping.cpp  com_language.cpp  com_message.cpp  com_networkState.cpp  com_texture.cpp  com_threadsEngine.cpp
common/src/enet/: protocol.c
common/src/script/: as_builder.cpp  as_compiler.cpp  as_context.cpp  as_gc.cpp  as_parser.cpp  as_string.cpp
common/src/tinyxml2/: tinyxml2.cpp
server/: fileBootstrap.ini
server/data/: english.lang  italian.lang  loadFileMap.txt
server/data/clientScripts/: clientInit.sc
server/data/scripts/: loadResources.sc  test1.sc
server/data/shaders/: 2dQuad.frag  2dQuad.vert
server/hdr/: main.h
server/hdr/classes/: s_signals.h  server.h
server/hdr/network/: network.h  s_network.h
server/hdr/system/: s_fileBootstrap.h  s_peers.h  s_processFrame.h  s_resources.h  s_scriptEngine.h  s_shutdown.h
server/src/: main.cpp
server/src/classes/: s_signals.cpp  server.cpp
server/src/network/: s_network.cpp
server/src/system/: peers.cpp  s_fileBootstrap.cpp  s_peers.cpp  s_processFrame.cpp  s_resources.cpp  s_resources.h  s_scriptEngine.cpp  s_shutdown.cpp
